# sakuratrade

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CORRECTED_INTEGRATION_GUIDE.md  DOCSYNC_SMOKELOG.md  FRONTEND_BACKEND_INTEGRATION_GUIDE.md  INTEGRATED_ANALYSIS_README.md  LICENSE  MESSAGE_EDIT_IMPLEMENTATION.md  MESSAGE_EDIT_IMPLEMENTATION_GUIDE.md  Makefile  NOTES.local.md  README.md  README_symbols.md  STRUCTURE_MAP.md  alembic.ini  analysis_improvement_summary.md  app.db  app.db.bak  app.py  doc_sync_plan.json  docker-compose.yml  mypy.ini  openapi.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  result_case_002.html  ruff.toml  ruff_f841.json  ruff_full.txt  simple_backend.py  simple_chat_server.py  start_test_server.py  test.db  (+11 more)
.artifacts/: warnings.baseline.txt
.github/: CODEOWNERS  pull_request_template.md  smoke-no-docs.txt  smoke-nodocs.txt
.mcp-out/: daily-report.md  entry-edit-failure-handling-implementation-report.md  entry-edit-modal-e2e.spec.ts  entry-edit-modal-implementation-summary.md  entry-edit-save-e2e.spec.ts  position-context-menu-e2e-test-plan.md  position-context-menu-implementation-summary.md  position-update-success-flow-e2e.spec.ts  revert-report.md  telemetry-implementation-final-report.md  telemetry-report.json
alembic/: env.py
alembic_backup/: env.py
app/: Dockerfile  __init__.py  advice_template.j2  config.py  database.py  deps.py  main.py  models.py  requirements.txt  schemas.py
docs/: DB_MIGRATION.md  README.md  positions-live-rollout.md  schema-usage-matrix.md
docsync-artifacts/: doc_sync_plan.json
entry-v04/: README.md  example.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/: .env  .env.example  .gitignore  Dockerfile  TESTING_GUIDE.md  TRADES_FILTER_README.md  analyze-pages.js  babel.config.js  dashboard-test.js  eslint.config.js  (+10 more)
(+526 files in other folders)
