[project]
name = "gptset"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
src = ["app", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "TID"]
extend-select = ["TID252"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402"]
